VT-944: Valitun valintaryhmän tai hakukohteen organisaatioit tallennetaan factoryyn. polyfill-service lisätty index.html:ään

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="../common/jslib/static/jquery.nestable.js"></script>
     <script type="text/javascript" src="../common/jslib/static/jquery.mjs.nestedSortable.js"></script>
     <script type="text/javascript" src="../common/jslib/ui-bootstrap-tpls.min.js"></script>
+    <script src="//cdn.polyfill.io/v1/polyfill.min.js"></script>
 
     <!--conf -->
     <script type="text/javascript"  src="../configuration/configuration.js"></script>
@@ -23,6 +24,7 @@
     <script type="text/javascript" src="valintaperusteet.js"></script>
     <script type="text/javascript" src="routes.js"></script>
     <script type="text/javascript" src="organisaatio/userOrganizationsModel.js"></script>
+    <script type="text/javascript" src="organisaatio/organisaatioModel.js"></script>
     <script type="text/javascript" src="userAccessLevels.js"></script>
     <script type="text/javascript" src="valintaryhmalistaus/valintaryhmaHakukohdeTree.js"></script>
     <script type="text/javascript" src="valintaryhma/valintaryhma.js"></script>
