--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -49,6 +49,7 @@
     <script type="text/javascript" src="../common/js/ng-breadcrumbs.js"></script>
     <script type="text/javascript" src="../common/js/rootctrl.js"></script>
     <script type="text/javascript" src="../common/js/localisation.js"></script>
+    <script type="text/javascript" src="../common/js/valintaryhmapuuvalitsincontroller.js"></script>
 
     <script type="text/javascript" src="laskentakaavat/laskentakaavaresources.js"></script>
     <script type="text/javascript" src="laskentakaavat/listaus/laskentakaavalista.js"></script>
@@ -66,6 +67,7 @@
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/guid.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/funktioasetukset/funktioasetusController.js"></script>
     <script type="text/javascript" src="laskentakaavat/listaus/hakukohdelaskentakaavalista.js"></script>
+    <script type="text/javascript" src="laskentakaavat/listaus/kaavakopiointi.js"></script>
 
 
     <script type="text/javascript" src="valinnanvaihe/valintaryhmavalinnanvaihe.js"></script>
