--- a/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
@@ -18,6 +18,12 @@
     </button>
     <span ng-click="createKaava()" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i> {{ t('hakukohdelaskentakaavalista.uusi') || 'Uusi laskentakaava' }}</span>
 
+    <div ng-controller="KaavaKopiointiController">
+        <modal modal-template="laskentakaavat/listaus/kaavakopiointiModal.html">
+            <modal-open></modal-open>
+        </modal>
+    </div>
+
     <h2>{{ t('hakukohdelaskentakaavalista.laskentakaavalista') || 'Laskentakaavalista' }}</h2>
     
     <div class="col-md-12" ng-repeat="hakukohde in hakukohdeLaskentakaavaLista.hakukohdeList()">
@@ -59,6 +65,7 @@
                 <tr>
                     <th>{{ t('hakukohdelaskentakaavalista.nimi') || 'Nimi' }}</th>
                     <th>{{ t('hakukohdelaskentakaavalista.kuvaus') || 'Kuvaus' }}</th>
+                    <th>{{ t('laskentakaavalista.kopioikaava') || 'Kopioi kaava'}}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -68,6 +75,10 @@
                     </td>
                     <td>
                         {{kaava.kuvaus}}
+                    </td>
+                    <td>
+                        <button class="btn btn-default btn-sm" ng-click="kaavaKopiointiModal(kaava)"><i class="fa fa-file-o"></i>
+                            <i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i></button>
                     </td>
                 </tr>
                 </tbody>
