--- a/src/main/webapp/app/laskentakaavat/listaus/kaavakopiointiModal.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/kaavakopiointiModal.html
@@ -4,15 +4,13 @@
 <div class="modal-body">
     <form class="form-horizontal" name="kaavakopio">
         <div class="form-group">
-            <label class="col-sm-4 control-label" for="uusinimi">Kopioitavan kaavan nimi</label>
-
+            <label class="col-sm-4 control-label" for="uusinimi">Uuden kaavan nimi</label>
             <div class="col-sm-8">
-                <input ng-required="!nimi" type="text" id="uusinimi" class="form-control" ng-model="model.uusinimi"/>
+                <input ng-required="!nimi" type="text" id="uusinimi" class="form-control" ng-model="kaavaKopioParams.uusinimi"/>
             </div>
         </div>
-        <div class="form-group">
-            <div ng-include="'../common/partials/valintaryhmaSelector.html'"/>
-        </div>
+
+        <div ng-include="'../common/partials/valintaryhmaPuuValitsin.html'"/>
     </form>
 </div>
 <div class="modal-footer">
