--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -59,9 +59,11 @@
     <label class="form-row-label" for="">{{ t('valintaryhmalomake.nimi') || 'Nimi' }}</label>
 
     <div class="form-row-content width-60">
-        <input auth="ophCrud" auth-action="disable" class="width-60" type="text" name="" id="" ng-model="model.valintaryhma.nimi" required/>
+        <input class="width-60" type="text" name="" id="" ng-model="model.valintaryhma.nimi" required/>
         <br><span class="red" ng-show="model.nameerror">{{ t('valintaryhmalomakeuusi.valintaryhmalomakeuusi.nimiloytyyjo') || 'Valintaryhmän nimi on jo käytössä. Anna jokin toinen nimi ryhmälle.' }}</span>
     </div>
+
+
     <div class="clear"></div>
 </div>
 
@@ -74,10 +76,10 @@
     <div class="clear"></div>
 </div>
 
-<div class="form-row">
-    <label class="form-row-label" for="">{{ t('valintaryhmalomake.haku') || 'Haku' }}</label>
-    <div class="form-row-content width-60">
-        <select auth="update" auth-action="disable" ng-model="model.valintaryhma.hakuoid" ng-options="h.oid as h.nimi.kieli_fi for h in model.haut | orderBy:'nimi.kieli_fi'">
+<div  class="form-row">
+    <label  class="form-row-label" for="">{{ t('valintaryhmalomake.haku') || 'Haku' }}</label>
+    <div  class="form-row-content width-60">
+        <select ng-model="model.valintaryhma.hakuoid" ng-options="h.oid as h.nimi.kieli_fi for h in model.haut | orderBy:'nimi.kieli_fi'">
             <option value=""></option>
         </select>
     </div>
