--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -24,7 +24,7 @@
     <!-- app js-->
     <script type="text/javascript" src="valintaperusteet.js"></script>
     <script type="text/javascript" src="routes.js"></script>
-    <script type="text/javascript" src="organisaatio/userOrganizationsModel.js"></script>
+    <script type="text/javascript" src="organisaatio/userModel.js"></script>
     <script type="text/javascript" src="organisaatio/organisaatioModel.js"></script>
     <script type="text/javascript" src="userAccessLevels.js"></script>
     <script type="text/javascript" src="valintaryhmalistaus/valintaryhmaHakukohdeTree.js"></script>
