--- a/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
@@ -38,6 +38,7 @@
                 <tr>
                     <th>{{ t('hakukohdelaskentakaavalista.nimi') || 'Nimi' }}</th>
                     <th>{{ t('hakukohdelaskentakaavalista.kuvaus') || 'Kuvaus' }}</th>
+                    <th>{{ t('laskentakaavalista.kopioikaava') || 'Kopioi kaava'}}</th>
                 </tr>
             </thead>
             <tbody>
@@ -47,6 +48,10 @@
                     </td>
                     <td>
                         {{kaava.kuvaus}}
+                    </td>
+                    <td>
+                        <button class="btn btn-default btn-sm" ng-click="kaavaKopiointiModal(kaava)"><i class="fa fa-file-o"></i>
+                            <i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i></button>
                     </td>
                 </tr>
             </tbody>
