--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -59,7 +59,7 @@
     <label class="form-row-label" for="">{{ t('valintaryhmalomake.nimi') || 'Nimi' }}</label>
 
     <div class="form-row-content width-60">
-        <input  class="width-60" type="text" name="" id="" ng-model="model.valintaryhma.nimi" required/>
+        <input auth auth-enable="update" class="width-60" type="text" name="" id="" ng-model="model.valintaryhma.nimi" required/>
         <br><span class="red" ng-show="model.nameerror">{{ t('valintaryhmalomakeuusi.valintaryhmalomakeuusi.nimiloytyyjo') || 'Valintaryhmän nimi on jo käytössä. Anna jokin toinen nimi ryhmälle.' }}</span>
     </div>
 
