--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -59,7 +59,7 @@
     <label class="form-row-label" for="">{{ t('valintaryhmalomake.nimi') || 'Nimi' }}</label>
 
     <div class="form-row-content width-60">
-        <input auth auth-enable="update" class="width-60" type="text" name="" id="" ng-model="model.valintaryhma.nimi" required/>
+        <input auth ng-disabled="!userAccess.updateOrg" class="width-60" type="text" name="" id="" ng-model="model.valintaryhma.nimi" required/>
         <br><span class="red" ng-show="model.nameerror">{{ t('valintaryhmalomakeuusi.valintaryhmalomakeuusi.nimiloytyyjo') || 'Valintaryhmän nimi on jo käytössä. Anna jokin toinen nimi ryhmälle.' }}</span>
     </div>
 
@@ -79,7 +79,7 @@
 <div  class="form-row">
     <label  class="form-row-label" for="">{{ t('valintaryhmalomake.haku') || 'Haku' }}</label>
     <div  class="form-row-content width-60">
-        <select ng-model="model.valintaryhma.hakuoid" ng-options="h.oid as h.nimi.kieli_fi for h in model.haut | orderBy:'nimi.kieli_fi'">
+        <select auth ng-disabled="!userAccess.updateOrg" ng-model="model.valintaryhma.hakuoid" ng-options="h.oid as h.nimi.kieli_fi for h in model.haut | orderBy:'nimi.kieli_fi'">
             <option value=""></option>
         </select>
     </div>
@@ -90,7 +90,7 @@
     <label class="form-row-label" for="">{{ t('valintaryhmalomake.kohdejoukko') || 'Kohdejoukko' }}</label>
 
     <div class="form-row-content width-60">
-        <select ng-disabled="model.valintaryhma.level > 1" ng-model="model.valintaryhma.kohdejoukko"
+        <select auth ng-disabled="model.valintaryhma.level > 1 || !userAccess.updateOrg" ng-model="model.valintaryhma.kohdejoukko"
                 ng-options="k.koodiUri as k.metadata[0].nimi for k in model.kohdejoukot">
         </select>
     </div>
@@ -187,11 +187,11 @@
         <div class="clear"></div>
 
         <div ng-show="model.valintaryhma.oid" class="form-row">
-                <span auth="crud" type="button" class="btn btn-sm btn-default" ng-click="lisaaValinnanVaihe()"><i
-                        class="fa fa-plus"></i> {{ t('valintaperusteet.valinnanvaihe') || 'Valinnanvaihe'}}</span>
-                <span auth="crud" type="button" class="btn btn-sm btn-default"
+                <button auth ng-disabled="!userAccess.crudOrg" type="button" class="btn btn-sm btn-default" ng-click="lisaaValinnanVaihe()"><i
+                        class="fa fa-plus"></i> {{ t('valintaperusteet.valinnanvaihe') || 'Valinnanvaihe'}}</button>
+                <button auth ng-disabled="!userAccess.crudOrg" type="button" class="btn btn-sm btn-default"
                       ng-click="lisaaValintakoeValinnanVaihe()"><i
-                        class="fa fa-plus"></i> {{ t('valintaperusteet.valintakoevalinnanvaihe') || 'Valintakoevalinnanvaihe'}}</span>
+                        class="fa fa-plus"></i> {{ t('valintaperusteet.valintakoevalinnanvaihe') || 'Valintakoevalinnanvaihe'}}</button>
         </div>
     </div>
 </div>
@@ -225,7 +225,7 @@
                        ng-click="model.removeHakijaryhma(data.oid)"></i>
                 </td>
                 <td>
-                    <button class="btn btn-default btn-sm" ng-click="openHakijaryhmaKopiointiModal(data)">
+                    <button auth ng-disabled="!userAccess.updateOrg" class="btn btn-default btn-sm" ng-click="openHakijaryhmaKopiointiModal(data)">
                         <i class="fa fa-file-o"></i><i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i>
                     </button>
                 </td>
@@ -253,12 +253,12 @@
     <button type="button" class="float-left margin-right-1 btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="{{ t('common.muista') || 'Muista tallentaa muutoksesi' }}"><i
             class="fa fa-arrow-left"></i> {{ t('common.takaisin') || 'Takaisin' }}
     </button>
-    <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
+    <button auth ng-disabled="!form.$valid || !userAccess.updateOrg" class="btn btn-sm btn-primary" type="submit"><i
             class="fa fa-floppy-o"></i>
         {{ t('common.tallenna') || 'Tallenna' }}
     </button>
 
-    <button auth="crud" ng-disabled="!model.okToDelete" class="btn btn-sm btn-primary" type="button" ng-click="deleteValintaryhma()">
+    <button auth ng-disabled="!model.okToDelete || !userAccess.crudOrg" class="btn btn-sm btn-primary" type="button" ng-click="deleteValintaryhma()">
         <i class="fa fa-trash-o"></i>
         {{ t('common.poista') || 'Poista' }}
     </button>
