--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -24,9 +24,9 @@
     <!-- app js-->
     <script type="text/javascript" src="valintaperusteet.js"></script>
     <script type="text/javascript" src="routes.js"></script>
-    <script type="text/javascript" src="organisaatio/userModel.js"></script>
+    <script type="text/javascript" src="User/userModel.js"></script>
     <script type="text/javascript" src="organisaatio/organisaatioUtility.js"></script>
-    <script type="text/javascript" src="userAccessLevels.js"></script>
+    <script type="text/javascript" src="User/userAccessLevels.js"></script>
     <script type="text/javascript" src="valintaryhmalistaus/valintaryhmaHakukohdeTree.js"></script>
     <script type="text/javascript" src="valintaryhma/valintaryhma.js"></script>
     <script type="text/javascript" src="valintaryhma/valintakoekoodit.js"></script>
